--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,6 @@
     "nodemon": "^3.0.3"
   },
   "scripts": {
-    "start": "nodemon index.js",
-    "devStart": "nodemon index.js"
+    "start": "nodemon index.js"
   }
 }
