--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "nodemon": "^3.0.3"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "build": "node build"
   }
 }
