--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,1 +1,5 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
+{
+  "version": 2,
+  "builds": [{ "source": "./index.js", "use": "@vercel/node" }],
+  "routes": [{ "source": "/(.*)", "destination": "/" }]
+}
