--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,4 @@
 {
   "version": 2,
-  "builds": [{ "source": "./index.js", "use": "@vercel/node" }],
-  "routes": [{ "source": "/(.*)", "destination": "/" }]
+  "rewrites": [{ "source": "./index.js", "destination": "/api" }]
 }
