--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,4 +1,5 @@
 {
   "version": 2,
-  "rewrites": [{ "source": "./index.js", "destination": "/api" }]
+  "builds": [{ "source": "./index.js" }],
+  "routes": [{ "source": "/(.*)", "destination": "/" }]
 }
