--- a/server/vercel.json
+++ b/server/vercel.json
@@ -6,5 +6,11 @@
       "use": "@vercel/node"
     }
   ],
-  "rewrites": [{ "source": "/(.*)", "destination": "src/index.js" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "src/index.js" }],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [{ "key": "Access-Control-Allow-Origin", "value": "*" }]
+    }
+  ]
 }
